--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
-	"name": "leetcode-cheatsheet-develop-helper",
-	"displayName": "Leetcode Cheatsheet Develop Helper",
-	"description": "",
-	"publisher": "Renkin",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.64.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onStartupFinished"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "leetcode-cheatsheet-develop-helper.helloWorld",
-				"title": "Hello World"
-			}
-		]
-	},
-	"scripts": {
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"ext:build": "npm run compile && tsup src/extension.ts --external vscode",
-		"ext:dev": "nr ext:build --watch src",
-		"ext:publish": "nr ext:build &&vsce publish --no-dependencies",
-		"ext:pack": "nr ext:build && vsce package --no-dependencies"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.64.0",
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.1.1",
-		"@types/node": "14.x",
-		"@typescript-eslint/eslint-plugin": "^5.21.0",
-		"@typescript-eslint/parser": "^5.21.0",
-		"eslint": "^8.14.0",
-		"glob": "^8.0.1",
-		"mocha": "^9.2.2",
-		"typescript": "^4.6.4",
-		"@vscode/test-electron": "^2.1.3",
-		"tsup": "^5.12.7"
-	},
-	"dependencies": {
-		"vscode-languageserver": "^9.0.1"
-	}
+  "name": "leetcode-cheatsheet-develop-helper",
+  "displayName": "Leetcode Cheatsheet Develop Helper",
+  "description": "",
+  "publisher": "Renkin",
+  "version": "0.0.2",
+  "permissions": [
+    "workspace"
+  ],
+  "engines": {
+    "vscode": "^1.64.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "leetcode-cheatsheet-develop-helper.helloWorld",
+        "title": "Hello World"
+      }
+    ]
+  },
+  "scripts": {
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "ext:build": "npm run compile && tsup src/extension.ts --external vscode",
+    "ext:dev": "nr ext:build --watch src",
+    "ext:publish": "nr ext:build &&vsce publish --no-dependencies",
+    "ext:pack": "nr ext:build && vsce package --no-dependencies"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.64.0",
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "14.x",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "glob": "^8.0.1",
+    "mocha": "^9.2.2",
+    "typescript": "^4.6.4",
+    "@vscode/test-electron": "^2.1.3",
+    "tsup": "^5.12.7"
+  },
+  "dependencies": {
+    "vscode-languageserver": "^9.0.1"
+  }
 }
